Cleaned up the project - With SonarLint!